# x-bot

./: .env.example  .gitignore  Procfile  check_trade.py  dashboard.py  generate_investor_pdf.py  main.py  railway.toml  requirements.txt  run_smart_trading.py  run_trading.py
config/: creators.json
social_signals_bot/: .env.example  main.py  pyproject.toml  requirements.txt  run_strategies.py  vision.md
social_signals_bot/src/: __init__.py  config.py  dashboard_reporter.py  models.py  notifications.py
social_signals_bot/src/analysis/: technical.py
social_signals_bot/src/consensus/: __init__.py  engine.py  enhanced_engine.py
social_signals_bot/src/data_ingestion/: mock_data.py  reddit_client.py  youtube_client.py
social_signals_bot/src/scoring/: __init__.py  evaluator.py  glicko2.py
social_signals_bot/src/signal_extraction/: extractor.py  llm_extractor.py
social_signals_bot/src/strategies/: __init__.py  multi_runner.py
social_signals_bot/src/trading/: __init__.py  binance_testnet.py  paper_trader.py
social_signals_bot/tests/: test_signal_extraction.py
src/: config.py  constants.py  main.py  models.py
src/analysis/: __init__.py  technical.py
src/consensus/: enhanced_engine.py
src/data_ingestion/: __init__.py  apify_client.py  price_client.py  reddit_client.py  x_client.py  youtube_client.py
src/output/: __init__.py  exporter.py  reports.py
src/signal_extraction/: __init__.py  extractor.py  llm_extractor.py  rules.py
src/strategies/: backtester.py  config.py  multi_runner.py
src/trading/: risk_manager.py  smart_trader.py
