[project]
name = "crypto-consensus"
version = "0.1.0"
description = "Crypto X Creator Consensus & Ranking System"
readme = "vision.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "macrocosmos>=2.1.0",
    "ccxt>=4.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
consensus = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
